# tune-nix-eval

./: .gitignore  README.md  env.yaml  flake.nix  hoard.nix  mesh.nix  package.nix  pyproject.toml
tune_nix_eval/: __main__.py  extra_types.py  logger.py  memory_allocators.py  utilities.py
tune_nix_eval/cmd/: main.py
tune_nix_eval/nix/: utilities.py
tune_nix_eval/nix/eval/: raw.py  stats.py
